# emolitter

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: GIF_SCRIPT.md  LAUNCH_POSTS.md  SHOWCASE.md  VISUALS.md
emolitter/: __init__.py  cli.py
examples/: cinematic-midnight.txt  gentle-maker.txt  minimal-office.txt
src/: cli.js  config.js  history.js  letter.js  listener-runner.js  listener.js  menu.js  paths.js  poetry.js  sample.js  showcase.js  state.js  ui.js
