[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emolitter"
version = "0.1.0"
description = "A poetic CLI that turns desktop activity into literary letters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.7",
    "pygetwindow>=0.0.9",
]

[project.scripts]
emo = "emolitter.cli:main"

[tool.setuptools.packages.find]
include = ["emolitter*"]
